test-expected/large/foojobexecution/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: jobexecapp
    foo.com/duversion: 2.2.17-20190911.1568206309536
    foo.com/version: 2.2.17
  labels:
    app.kubernetes.io/name: foojobexecution
    helm.sh/chart: foojobexecution-2.2.17
  name: foojobexecution
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: foojobexecution
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: foojobexecution
        app.kubernetes.io/name: foojobexecution
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/va-125.0.0-x64_redhat_linux_7-docker-prod/foo-jobexecapp:2.2.17-20190911.1568206309536
        imagePullPolicy: IfNotPresent
        name: foojobexecution
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
