test-expected/large/foojobexecution/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: jobexecapp
    foo.com/duversion: 2.2.17-20190911.1568206309536
    foo.com/version: 2.2.17
  labels:
    app.kubernetes.io/name: foojobexecution
    helm.sh/chart: foojobexecution-2.2.17
  name: foojobexecution
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: foojobexecution
  type: ClusterIP
